# Flet-whisper

./: .gitignore  README.md  main.py  pyproject.toml
